[gd_scene load_steps=9 format=3 uid="uid://bfxr7e2lvjp8y"]

[ext_resource type="Script" path="res://enemies/slime.gd" id="1_86w04"]
[ext_resource type="Texture2D" uid="uid://bl53gpvg5mh1y" path="res://assets/sprites/slime_green.png" id="1_m86nq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y8dg1"]
atlas = ExtResource("1_m86nq")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuljt"]
atlas = ExtResource("1_m86nq")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_15o16"]
atlas = ExtResource("1_m86nq")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxkch"]
atlas = ExtResource("1_m86nq")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_1hp5q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8dg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuljt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15o16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxkch")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5odw"]
size = Vector2(10, 10)

[node name="Slime" type="Area2D" groups=["Enemy"]]
collision_mask = 2
script = ExtResource("1_86w04")
metadata/movebale = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_1hp5q")
animation = &"idle"
autoplay = "idle"
frame = 3
frame_progress = 0.268098

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_l5odw")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-8, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
